# AsciiDoc-MCP

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build.gradle  demo.adoc  docToolchainConfig.groovy  docker-compose.yml  dtcw  gradle.properties  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docs.yml  generate-site.yml
src/asciidoc_mcp/: __init__.py  asciidoc_processor.py  cli.py  server.py
src/asciidoc_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/docs/: asciidoc-formatting-conventions.adoc  landingpage.gsp
src/docs/arc42/: arc42-template.adoc  arc42.adoc  architecture.adoc  quality-criteria.adoc
src/docs/arc42/adrs/: ADR001-Idea.adoc  ADR002-Technology-Stack.adoc  ADR003-Architecture-Pattern.adoc
src/docs/arc42/chapters/: 01_introduction_and_goals.adoc  03_context_and_scope.adoc  04_solution_strategy.adoc  05_building_block_view.adoc  07_deployment_view.adoc  09_architecture_decisions.adoc  10_quality_requirements.adoc
tests/: __init__.py  test_asciidoc_processor.py
